added all content

--- a/index.html
+++ b/index.html
@@ -15,9 +15,29 @@
         <div>
             <img class="container-img" src="sunset.jpg" alt="Sunset">
         </div>
+        <section>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur <span class="oblique">adipisicing elit</span>. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="bold"> 
+                    Laborum voluptatem praesentium sit</span> magnam <span class="blue-oblique">eius</span>?  Veritatis necessitatibus sapiente non, voluptas totam at quisquam libero cumque laborum fugiat sit dolores atque debitis mollitia amet modi suscipit odit voluptatem. Veritatis blanditiis incidunt eaque!
+            </p>
+        </section>
+        <div class="container-cars">
+            <img class="carborder" src="car01.jpg" alt="yellow car">
+            <img class="carborder" src="car02.jpg" alt="white car">
+            <img class="carborder" src="car03.jpg" alt="blue car">
+            <img class="carborder" src="car04.jpg" alt="black car">
+            <img class="carborder" src="car05.jpg" alt="red car">
+        </div>
+        <section>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis, perferendis molestiae dolore qui commodi placeat, asperiores odio ab consequuntur omnis unde voluptas minus aut voluptatem suscipit ea optio saepe itaque explicabo harum sunt facere.
+            </p>
+        </section>
     </main>
-    <footer>
-
+    <footer class="footer">
+        <p>
+            &#169; Copyright
+        </p>
     </footer>
     
 </body>
