changed text color

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
         <section>
             <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis, perferendis molestiae dolore qui commodi placeat, asperiores odio ab consequuntur omnis unde voluptas minus aut voluptatem suscipit ea optio saepe itaque explicabo harum sunt facere.
+             <span class="blue">Lorem ipsum</span> dolor sit amet consectetur adipisicing elit. Nobis veritatis, perferendis molestiae dolore qui commodi placeat, asperiores odio ab consequuntur omnis unde voluptas minus aut voluptatem suscipit ea optio saepe itaque explicabo harum sunt facere.
             </p>
         </section>
     </main>
