added header content

--- a/wild.html
+++ b/wild.html
@@ -1,12 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wild</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
+    <header>
+        <img class="header" src="title.gif" alt="yourcompany">
+        <nav>
+            <ul class="menu">
+                <li>
+                    <a href="#">
+                        <img class="image" src="img00.jpg" alt="Animals">
+                        <p>Home</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="image" src="img01.jpg" alt="Butterfly">
+                       <p>About</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="image" src="img02.jpg" alt="Butterfly">
+                        <p>Services</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <img class="image" src="img03.jpg" alt="Flowers">
+                        <p>Contact</p>
+                    </a>
+                </li>
+            </ul>
+
+
+
+        </nav>
+    </header>
+
 </body>
+
 </html>
