added main and footer content

--- a/wild.html
+++ b/wild.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wild</title>
+    <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -23,7 +24,7 @@
                 <li>
                     <a href="#">
                         <img class="image" src="img01.jpg" alt="Butterfly">
-                       <p>About</p>
+                        <p>About</p>
                     </a>
                 </li>
                 <li>
@@ -39,12 +40,45 @@
                     </a>
                 </li>
             </ul>
-
-
-
         </nav>
     </header>
-
+    <main>
+        <section class="left">
+            <ul>
+                <li>
+                    <a href="https://www.google.com/">Jughfghh accyjkk.</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/">Jughfghh accyjkk.</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/">Agjkkjtuf  akopurfhhh</a>
+                </li>
+                <li>
+                    <a href="https://www.google.com/">Suewqkkjtuf  giolndsarfhhh</a>
+                </li>
+                <li>
+                    <a href="#article5">Kopkqkkjtuf fertoldsarfh!</a>
+                </li>
+            </ul>
+        </section>
+        <section class="center">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium rem quidem sit nesciunt laborum officia consequuntur. Vel officiis eligendi eum quos facere praesentium accusamus veniam? Provident inventore sapiente ipsam quisquam perspiciatis. Maxime tempore neque alias unde sint doloribus. Nostrum corporis, eligendi numquam harum suscipit similique ex ducimus blanditiis consectetur perferendis inventore explicabo doloremque cum molestias sapiente! Non, voluptatum autem exercitationem quasi repudiandae iusto recusandae atque debitis perferendis, laudantium libero sint mollitia odit a eum, tempore consequatur aut adipisci temporibus excepturi repellendus! Consectetur incidunt quibusdam blanditiis consequuntur sint aut soluta. Asperiores illo eius libero modi ab incidunt, eveniet placeat ipsa rem!
+            </p>
+        </section>
+        <section class="right">
+            <h3>Title</h3>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores adipisci nihil eveniet, enim quia sequi ex ipsa minima animi. Recusandae debitis obcaecati exercitationem dolore quibusdam, fugiat laboriosam inventore distinctio nihil.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ab reiciendis. Similique illo culpa, error vero quam cupiditate natus minus aperiam numquam obcaecati vel, dolore assumenda, neque optio explicabo fugiat.</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla eius distinctio voluptates blanditiis, architecto provident perferendis quaerat ipsam accusantium, esse dolores molestiae in minus dignissimos. Repellat beatae esse aspernatur.</p>
+        </section>
+    </main>
+    <footer class="footbackgr">
+        <p>
+            &#169; Copyright
+        </p>
+    </footer>
 </body>
 
 </html>
