added link to page wild

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,10 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header class="header">
-     <h1> My simple website</h1>
+        <h1> My simple website</h1>
     </header>
     <main>
         <div>
@@ -18,8 +20,11 @@
         </div>
         <section>
             <p>
-                Lorem, ipsum dolor sit amet consectetur <span class="oblique">adipisicing elit</span>. Lorem ipsum dolor sit amet consectetur adipisicing elit. <span class="bold"> 
-                    Laborum voluptatem praesentium sit</span> magnam <span class="blue-oblique">eius</span>?  Veritatis necessitatibus sapiente non, voluptas totam at quisquam libero cumque laborum fugiat sit dolores atque debitis mollitia amet modi suscipit odit voluptatem. Veritatis blanditiis incidunt eaque!
+                Lorem, ipsum dolor sit amet consectetur <span class="oblique">adipisicing elit</span>. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit. <span class="bold">
+                    Laborum voluptatem praesentium sit</span> magnam <span class="blue-oblique">eius</span>? Veritatis
+                necessitatibus sapiente non, voluptas totam at quisquam libero cumque laborum fugiat sit dolores atque
+                debitis mollitia amet modi suscipit odit voluptatem. Veritatis blanditiis incidunt eaque!
             </p>
         </section>
         <div class="container-cars">
@@ -31,7 +36,11 @@
         </div>
         <section>
             <p>
-                <span class="blue">Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit. Autem sed suscipit laudantium quod ducimus adipisci saepe nostrum nulla officia neque velit, iure, facere architecto! Ipsa quo temporibus voluptatibus quis dicta! ipsum dolor sit amet consectetur adipisicing elit. Nobis veritatis, perferendis molestiae dolore qui commodi placeat, asperiores odio ab consequuntur omnis unde voluptas minus aut voluptatem suscipit ea optio saepe itaque explicabo harum sunt facere.
+                <span class="blue">Lorem ipsum</span> dolor sit amet, consectetur adipisicing elit. Autem sed suscipit
+                laudantium quod ducimus adipisci saepe nostrum nulla officia neque velit, iure, facere architecto! Ipsa
+                quo temporibus voluptatibus quis dicta! ipsum dolor sit amet consectetur adipisicing elit. Nobis
+                veritatis, perferendis molestiae dolore qui commodi placeat, asperiores odio ab consequuntur omnis unde
+                voluptas minus aut voluptatem suscipit ea optio saepe itaque explicabo harum sunt facere.
             </p>
         </section>
     </main>
@@ -39,7 +48,14 @@
         <p>
             &#169; Copyright
         </p>
+        <p>
+            <a href="wild.html">
+                Wild
+            </a>
+        </p>
     </footer>
-    
+
+
 </body>
+
 </html>
