--- a/wild.html
+++ b/wild.html
@@ -5,80 +5,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>wild</title>
-    <link rel="stylesheet" href="reset.css">
+    <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="reset.css">
 </head>
 
 <body>
-    <header>
-        <img class="header" src="title.gif" alt="yourcompany">
-        <nav>
-            <ul class="menu">
-                <li>
-                    <a href="#">
-                        <img class="image" src="img00.jpg" alt="Animals">
+    <div class="wrapper">
+        <header class="header">
+            <img class="header-image" src="title.gif" alt="title">
+            <nav class="header-menu">
+                <ul>
+                    <li>
+                        <img src="img00.jpg" width="152" alt="home">
                         <p>Home</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img class="image" src="img01.jpg" alt="Butterfly">
+                    </li>
+                    <li>
+                        <img src="img01.jpg" width="152" alt="about">
                         <p>About</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img class="image" src="img02.jpg" alt="Butterfly">
+                    </li>
+                    <li>
+                        <img src="img02.jpg" width="152" alt="services">
                         <p>Services</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        <img class="image" src="img03.jpg" alt="Flowers">
+                    </li>
+                    <li>
+                        <img src="img03.jpg" width="152" alt="contact">
                         <p>Contact</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
-    <main>
-        <section class="left">
-            <ul>
-                <li>
-                    <a href="https://www.google.com/">Jughfghh accyjkk.</a>
-                </li>
-                <li>
-                    <a href="https://www.google.com/">Jughfghh accyjkk.</a>
-                </li>
-                <li>
-                    <a href="https://www.google.com/">Agjkkjtuf  akopurfhhh</a>
-                </li>
-                <li>
-                    <a href="https://www.google.com/">Suewqkkjtuf  giolndsarfhhh</a>
-                </li>
-                <li>
-                    <a href="#article5">Kopkqkkjtuf fertoldsarfh!</a>
-                </li>
-            </ul>
-        </section>
-        <section class="center">
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laudantium rem quidem sit nesciunt laborum officia consequuntur. Vel officiis eligendi eum quos facere praesentium accusamus veniam? Provident inventore sapiente ipsam quisquam perspiciatis. Maxime tempore neque alias unde sint doloribus. Nostrum corporis, eligendi numquam harum suscipit similique ex ducimus blanditiis consectetur perferendis inventore explicabo doloremque cum molestias sapiente! Non, voluptatum autem exercitationem quasi repudiandae iusto recusandae atque debitis perferendis, laudantium libero sint mollitia odit a eum, tempore consequatur aut adipisci temporibus excepturi repellendus! Consectetur incidunt quibusdam blanditiis consequuntur sint aut soluta. Asperiores illo eius libero modi ab incidunt, eveniet placeat ipsa rem!
-            </p>
-        </section>
-        <section class="right">
-            <h3>Title</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores adipisci nihil eveniet, enim quia sequi ex ipsa minima animi. Recusandae debitis obcaecati exercitationem dolore quibusdam, fugiat laboriosam inventore distinctio nihil.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ab reiciendis. Similique illo culpa, error vero quam cupiditate natus minus aperiam numquam obcaecati vel, dolore assumenda, neque optio explicabo fugiat.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi nulla eius distinctio voluptates blanditiis, architecto provident perferendis quaerat ipsam accusantium, esse dolores molestiae in minus dignissimos. Repellat beatae esse aspernatur.</p>
-        </section>
-    </main>
-    <footer class="footbackgr">
-        <p>
-            &#169; Copyright
-        </p>
-    </footer>
+                    </li>
+                </ul>
+                <div style="clear: both"></div>
+            </nav>
+        </header>
+        <main class="main">
+            <aside class="aside-left">
+                <ul>
+                    <li><a href="#">Lorem ipsum dolor sit amet.</a></li>
+                    <li><a href="#">Nam expedita similique unde distinctio.</a></li>
+                    <li><a href="#">Dolorum possimus dicta ducimus itaque.</a></li>
+                    <li><a href="#">Fuga eos necessitatibus cumque ipsum.</a></li>
+                    <li><a href="#">Minima soluta assumenda sequi maiores!</a></li>
+                </ul>
+            </aside>
+            <section class="main-content">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates dolor consequatur possimus optio
+                    nulla adipisci!</p>
+                <p>Sit corporis aliquid architecto a eius, nostrum quam reiciendis culpa nesciunt vero qui animi esse.
+                </p>
+                <p>Provident quia adipisci perspiciatis. Molestias accusamus incidunt, ut itaque asperiores velit
+                    praesentium laboriosam sapiente eaque.</p>
+            </section>
+            <aside class="aside-right">
+                <p class="aside-right_title">title</p>
+                <hr>
+                <article>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+                </article>
+                <hr>
+                <article>
+                    <p>Aspernatur eius repellat cumque at. Consectetur aspernatur.</p>
+                </article>
+                <hr>
+                <article>
+                    <p>Soluta debitis rerum obcaecati quisquam aut consectetur.</p>
+                </article>
+            </aside>
+            <div style="clear: both"></div>
+        </main>
+        <footer class="footer">
+            &copy; Copiright
+        </footer>
+    </div>
 </body>
 
 </html>
